# TSEMLib

./: AUTHORS  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.3  traces.5
examples/: Makefile.am  Makefile.in
examples/KohnSham-Helium/: Makefile.am  Makefile.in  Makefile.sample  SCFIteration.cpp  SCFIteration.h  ShowResult.cfg  ShowResult.net  cube_atom.mesh  info_evolve  run.sh.sample  test.sh
examples/laplaceEig/: Makefile.am  Makefile.in  cube.mesh  laplaceEig.cpp  test.sh
examples/movingMesh/: Makefile.am  Makefile.in  Makefile.sample  Poisson.cpp  Poisson.h  cube.mesh  cube.mesh.d  main.cpp  mesh2dx.sh  showMesh.cfg  showMesh.net  test.sh
examples/poisson_mixBC/: Makefile.am  Makefile.in  Makefile.sample  cube.mesh  poisson.cpp  run.sh.sample  test.sh
include/: Makefile.am  Makefile.in  TSEMSolver.h  TSEMVisualize.h  TetrahedralSEM.h
include/quad_info/: quad_info_3d_m
include/quad_info/qinfo_1d/: qinfo_1d_order10  qinfo_1d_order11  qinfo_1d_order12  qinfo_1d_order13  qinfo_1d_order14  qinfo_1d_order15  qinfo_1d_order16  qinfo_1d_order17  qinfo_1d_order18  qinfo_1d_order19  qinfo_1d_order2  qinfo_1d_order20  qinfo_1d_order21  qinfo_1d_order22  qinfo_1d_order23  qinfo_1d_order24  qinfo_1d_order25  qinfo_1d_order26  qinfo_1d_order27  qinfo_1d_order28  qinfo_1d_order29  qinfo_1d_order3  qinfo_1d_order30  qinfo_1d_order31  qinfo_1d_order32  qinfo_1d_order33  qinfo_1d_order34  qinfo_1d_order35  qinfo_1d_order36  qinfo_1d_order37  qinfo_1d_order38  qinfo_1d_order39  qinfo_1d_order4  qinfo_1d_order40  qinfo_1d_order41  qinfo_1d_order42  qinfo_1d_order43  qinfo_1d_order44  qinfo_1d_order45  qinfo_1d_order46  (+24 more)
src/: BuildSpace.cpp  CalcError.cpp  Discretize.cpp  Initialize.cpp  Interpolation.cpp  Makefile.am  Makefile.in  Miscellaneous.cpp  PointInfo.cpp  QuadInfo.cpp  TSEMSolver.cpp  TSEMVisualize.cpp  TetrahedralSEM.backup  cppfiles.txt  log
